# md2pydantic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  architecture.md  formats.md  getting-started.md  index.md
docs/guide/: auto-detect.md  error-handling.md  index.md  json.md  null-sentinels.md  partial-results.md  table-selection.md  tables.md  yaml.md
src/md2pydantic/: __init__.py  converter.py  models.py  parser.py  transformers.py  validators.py
tests/integration/: test_converter_integration.py  test_error_reporting_integration.py  test_package_scaffold.py  test_scanner_integration.py  test_table_integration.py  test_transformer_integration.py  test_validator_integration.py
tests/unit/: test_converter.py  test_error_reporting.py  test_hardening.py  test_parser.py  test_scaffold.py  test_smoke.py  test_table_scanner.py  test_transformers.py  test_validators.py
