[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md2pydantic"
version = "0.2.1"
description = "Extract structured data from messy Markdown strings into Pydantic v2 models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Felipe Pires Morandini" },
]
keywords = ["markdown", "pydantic", "parsing", "llm", "extraction"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0.0"]
markdown = ["marko>=2.0.0"]
yaml = ["pyyaml>=6.0"]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/felipemorandini/md2pydantic"
Documentation = "https://felipemorandini.github.io/md2pydantic/"
Repository = "https://github.com/felipemorandini/md2pydantic"
Issues = "https://github.com/felipemorandini/md2pydantic/issues"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["md2pydantic"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=md2pydantic --cov-report=term-missing"

[tool.coverage.run]
source_pkgs = ["md2pydantic"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.hatch.build.targets.wheel]
packages = ["src/md2pydantic"]
